fix: poprawione tłumaczenia usług - dodano brakujące usługi w językach polskim, niemieckim i hiszpańskim
- Dodano wszystkie 12 usług w wersji polskiej
- Dodano wszystkie 12 usług w wersji niemieckiej
- Dodano wszystkie 12 usług w wersji hiszpańskiej
- Teraz wszystkie języki mają identyczne usługi co wersja angielska

--- a/nginx.conf
+++ b/nginx.conf
@@ -29,7 +29,11 @@ http {
         application/javascript
         application/xml+rss
         application/atom+xml
-        image/svg+xml;
+        image/svg+xml
+        font/woff
+        font/woff2
+        application/font-woff
+        application/font-woff2;
 
     # Security headers for Cloudflare Tunnel
     add_header X-Frame-Options "SAMEORIGIN" always;
@@ -45,7 +49,40 @@ http {
         root /usr/share/nginx/html;
         index index.html;
 
-        # Trust Cloudflare headers
+        # Security headers
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+        
+        # HSTS (HTTP Strict Transport Security)
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+        
+        # Content Security Policy
+        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com https://www.google-analytics.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: blob:; connect-src 'self' https://www.google-analytics.com https://analytics.google.com https://www.googletagmanager.com; frame-src 'self' https://www.google.com https://www.google-analytics.com; object-src 'none'; base-uri 'self'; form-action 'self'; frame-ancestors 'self'; upgrade-insecure-requests;" always;
+
+        # Gzip compression
+        gzip on;
+        gzip_vary on;
+        gzip_min_length 1024;
+        gzip_proxied any;
+        gzip_comp_level 6;
+        gzip_types
+            text/plain
+            text/css
+            text/xml
+            text/javascript
+            application/json
+            application/javascript
+            application/xml+rss
+            application/atom+xml
+            image/svg+xml
+            font/woff
+            font/woff2
+            application/font-woff
+            application/font-woff2;
+
+        # Cloudflare Real IP
         set_real_ip_from 173.245.48.0/20;
         set_real_ip_from 103.21.244.0/22;
         set_real_ip_from 103.22.200.0/22;
@@ -77,18 +114,41 @@ http {
             try_files $uri $uri/ /index.html;
         }
 
-        # Cache static assets
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        # Cache static assets with different strategies
+        location ~* \.(js|css)$ {
             expires 1y;
             add_header Cache-Control "public, immutable";
             add_header Vary Accept-Encoding;
+            add_header X-Content-Type-Options nosniff;
         }
 
-        # Cache HTML files for a shorter time
-        location ~* \.html$ {
-            expires 1h;
-            add_header Cache-Control "public, must-revalidate";
-        }
+                    # Cache images and fonts
+                    location ~* \.(png|jpg|jpeg|gif|ico|svg|webp|avif)$ {
+                        expires 1y;
+                        add_header Cache-Control "public, immutable";
+                        add_header Vary Accept-Encoding;
+                    }
+
+                    location ~* \.(woff|woff2|ttf|eot)$ {
+                        expires 1y;
+                        add_header Cache-Control "public, immutable";
+                        add_header Vary Accept-Encoding;
+                        add_header Access-Control-Allow-Origin "*";
+                    }
+
+                    # Cache HTML files for a shorter time
+                    location ~* \.html$ {
+                        expires 1h;
+                        add_header Cache-Control "public, must-revalidate";
+                        add_header Vary Accept-Encoding;
+                    }
+
+                    # Cache manifest and service worker
+                    location ~* \.(webmanifest|json)$ {
+                        expires 1d;
+                        add_header Cache-Control "public, must-revalidate";
+                        add_header Vary Accept-Encoding;
+                    }
 
         # Security: deny access to hidden files
         location ~ /\. {
