Optymalizacja wydajności - preload, kompresja, cache i security headers

--- a/nginx.prod.conf
+++ b/nginx.prod.conf
@@ -1,30 +1,59 @@
 server {
-  listen 443 ssl;
+  listen 443 ssl http2;
   server_name meisterumzuege24.de;
 
   ssl_certificate     /etc/ssl/cloudflare/origin.crt;
   ssl_certificate_key /etc/ssl/cloudflare/origin.key;
   ssl_protocols       TLSv1.2 TLSv1.3;
   ssl_prefer_server_ciphers off;
+  ssl_session_cache shared:SSL:10m;
+  ssl_session_timeout 10m;
 
   root /usr/share/nginx/html;
   index index.html;
+
+  # Gzip compression
+  gzip on;
+  gzip_vary on;
+  gzip_min_length 1024;
+  gzip_proxied any;
+  gzip_comp_level 6;
+  gzip_types
+    text/plain
+    text/css
+    text/xml
+    text/javascript
+    application/json
+    application/javascript
+    application/xml+rss
+    application/atom+xml
+    image/svg+xml
+    font/woff
+    font/woff2
+    application/font-woff
+    application/font-woff2;
 
   # Główna aplikacja SPA (React, Vite)
   location / {
     try_files $uri $uri/ /index.html;
 
+    # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
     add_header Content-Security-Policy "default-src 'self'; img-src 'self' data: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com https://www.google-analytics.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' https://www.google-analytics.com https://analytics.google.com https://www.googletagmanager.com;" always;
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    
+    # Performance headers
+    add_header Cache-Control "public, max-age=3600" always;
   }
 
   # Cache dla plików statycznych z fingerprintem (build/*.js, *.css itd.)
   location ~* \.(?:js|css|woff2?|ttf|eot|svg|ico|jpg|jpeg|png|gif|webp|mp4)$ {
     expires 1y;
     add_header Cache-Control "public, immutable" always;
+    add_header Vary Accept-Encoding;
     access_log off;
   }
 
