--- a/nginx.prod.conf
+++ b/nginx.prod.conf
@@ -43,7 +43,7 @@ server {
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
-    add_header Content-Security-Policy "default-src 'self'; img-src 'self' data: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com https://www.google-analytics.com https://api.mapbox.com https://basemaps.cartocdn.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://api.mapbox.com https://basemaps.cartocdn.com; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' https://www.google-analytics.com https://analytics.google.com https://www.googletagmanager.com https://api.mapbox.com https://basemaps.cartocdn.com; worker-src 'self' blob:;" always;
+    add_header Content-Security-Policy "default-src 'self'; img-src 'self' data: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com https://www.google-analytics.com https://api.mapbox.com https://basemaps.cartocdn.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://api.mapbox.com https://basemaps.cartocdn.com; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' https://www.google-analytics.com https://analytics.google.com https://www.googletagmanager.com https://api.mapbox.com https://basemaps.cartocdn.com https://*.tiles.mapbox.com; worker-src 'self' blob:;" always;
     
     # Performance headers
     add_header Cache-Control "public, max-age=3600" always;
